# modern_pylogging

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: python-lint-and-tests.yml  python-publish.yml
src/modern_pylogging/: __init__.py  config_api.py  console_formatter.py  contextvars_helpers.py  helper_types.py  helper_utils.py  import_checker.py  json_formatter.py  json_helper.py  logging_handlers.py  logging_manager.py  orjson_helper.py  picologging_handlers.py
tests/: conftest.py  helpers.py  helpers_for_tests.py  test_envs.py  test_get_logger_lazy.py  test_json_formatter.py  test_logging_config.py
